--- a/base/build.gradle
+++ b/base/build.gradle
@@ -104,5 +104,6 @@ dependencies {
     implementation 'me.jessyan:retrofit-url-manager:1.4.0'
     //implementation "androidx.browser:browser:1.2.0"
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
