--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.shopify.shopifyapp">
+
     <dist:module dist:instant="true" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
-        android:name="com.shopify.shopifyapp.MyApplication"
+        android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -18,98 +21,103 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <service android:name="com.shopify.shopifyapp.notificationsection.FirebaseInstanceIDService">
+        <activity android:name=".checkoutsection.activities.OrderSuccessActivity"></activity>
+
+        <service android:name=".notificationsection.FirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service android:name="com.shopify.shopifyapp.notificationsection.FirebaseMessagingService">
+        <service android:name=".notificationsection.FirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service
-            android:name="com.shopify.shopifyapp.jobservicessection.JobScheduler"
-            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:name=".jobservicessection.JobScheduler"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <activity android:name="com.shopify.shopifyapp.basesection.activities.Splash">
+        <activity android:name=".basesection.activities.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter
                 android:autoVerify="true"
                 tools:targetApi="m">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
                     android:host="magenative.myshopify.com"
-                    android:scheme="https"
-                    />
+                    android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.shopify.shopifyapp.addresssection.activities.AddressList"
+            android:name=".addresssection.activities.AddressList"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
-        <activity android:name="com.shopify.shopifyapp.basesection.activities.BaseActivity" />
-        <activity android:name="com.shopify.shopifyapp.basesection.activities.Weblink" />
-        <activity android:name="com.shopify.shopifyapp.basesection.activities.NewBaseActivity" />
+        <activity android:name=".basesection.activities.BaseActivity" />
+        <activity android:name=".basesection.activities.Weblink" />
+        <activity android:name=".basesection.activities.NewBaseActivity" />
         <activity
-            android:name="com.shopify.shopifyapp.productsection.activities.ProductList"
+            android:name=".productsection.activities.ProductList"
+            android:launchMode="singleTop" />
+        <activity android:name=".productsection.activities.ProductView" />
+        <activity
+            android:name=".collectionsection.activities.CollectionList"
             android:launchMode="singleTop" />
         <activity
-            android:name="com.shopify.shopifyapp.productsection.activities.ProductView"
-             />
-        <activity
-            android:name="com.shopify.shopifyapp.collectionsection.activities.CollectionList"
+            android:name=".wishlistsection.activities.WishList"
             android:launchMode="singleTop" />
         <activity
-            android:name="com.shopify.shopifyapp.wishlistsection.activities.WishList"
+            android:name=".cartsection.activities.CartList"
             android:launchMode="singleTop" />
         <activity
-            android:name="com.shopify.shopifyapp.cartsection.activities.CartList"
+            android:name=".ordersection.activities.OrderList"
             android:launchMode="singleTop" />
         <activity
-            android:name="com.shopify.shopifyapp.ordersection.activities.OrderList"
+            android:name=".searchsection.activities.AutoSearch"
             android:launchMode="singleTop" />
+        <activity android:name=".checkoutsection.activities.CheckoutWeblink" />
         <activity
-            android:name="com.shopify.shopifyapp.searchsection.activities.AutoSearch"
-            android:launchMode="singleTop" />
-        <activity android:name="com.shopify.shopifyapp.checkoutsection.activities.CheckoutWeblink" />
-        <activity
-            android:name="com.shopify.shopifyapp.trialsection.activities.TrialExpired"
+            android:name=".trialsection.activities.TrialExpired"
             android:launchMode="singleTask" />
-        <activity android:name="com.shopify.shopifyapp.homesection.activities.HomePage" />
+        <activity android:name=".homesection.activities.HomePage" />
         <activity
-            android:name="com.shopify.shopifyapp.loginsection.activity.LoginActivity"
+            android:name=".loginsection.activity.LoginActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
         <activity
-            android:name="com.shopify.shopifyapp.userprofilesection.activities.UserProfile"
+            android:name=".userprofilesection.activities.UserProfile"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
         <activity
-            android:name="com.shopify.shopifyapp.loginsection.activity.RegistrationActivity"
+            android:name=".loginsection.activity.RegistrationActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
         <activity
-            android:name="com.shopify.shopifyapp.searchsection.activities.SearchByScanner"
+            android:name=".searchsection.activities.SearchByScanner"
             android:label="@string/app_name"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
-            android:name="com.shopify.shopifyapp.livepreviewsection.LivePreview"
+            android:name=".livepreviewsection.LivePreview"
             android:label="@string/app_name"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            />
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
+
 </manifest>
