created quick add section and some other fixes

--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".checkoutsection.activities.OrderSuccessActivity"></activity>
+
+        <activity android:name=".checkoutsection.activities.OrderSuccessActivity" />
 
         <service android:name=".notificationsection.FirebaseInstanceIDService">
             <intent-filter>
