--- a/base/build.gradle
+++ b/base/build.gradle
@@ -13,12 +13,12 @@ android {
         applicationId "com.shopify.shopifyapp"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 44
+        versionCode 45
         versionName "3.2"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
