--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <activity
             android:name=".loginsection.activity.LoginActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".userprofilesection.activities.UserProfile"
             android:launchMode="singleTop"
