--- a/base/build.gradle
+++ b/base/build.gradle
@@ -106,5 +106,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'me.relex:circleindicator:2.1.6'
 }
 apply plugin: 'com.google.gms.google-services'
