Added video feature on product view page and some other fixes

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -107,5 +107,7 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'me.relex:circleindicator:2.1.6'
+    // ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.13.2'
 }
 apply plugin: 'com.google.gms.google-services'
