--- a/base/build.gradle
+++ b/base/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     //imageslider
     implementation 'com.github.smarteist:autoimageslider:1.3.2'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'net.danlew:android.joda:2.10.3'
     // (Recommended) Add Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
@@ -111,5 +111,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.13.2'
     //Sweet Alert Dialog
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'com.karumi:dexter:6.2.2'
 }
 apply plugin: 'com.google.gms.google-services'
