Product List,Reorder,Order View,Facebook SDK,Cart Page Design,Similar product from sdk these all changes done and also soved some other issues

--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.shopify.shopifyapp">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <dist:module dist:instant="true" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,7 +29,24 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".productsection.activities.AllJudgeMeReviews"></activity>
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".ordersection.activities.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".ordersection.activities.OrderDetails" />
+        <activity android:name=".productsection.activities.AllJudgeMeReviews" />
         <activity android:name=".productsection.activities.JudgeMeCreateReview" />
         <activity
             android:name=".productsection.activities.VideoPlayerActivity"
@@ -155,11 +179,17 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
 
         <meta-data
+            android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
+            android:value="true" />
+        <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
             android:value="true" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
