--- a/base/build.gradle
+++ b/base/build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'io.fabric'
 android {
+    signingConfigs {
+        release {
+            storeFile file('newshopify.jks')
+            storePassword 'newshopify'
+            keyAlias 'newshopify'
+            keyPassword 'newshopify'
+        }
+    }
     dataBinding {
         enabled = true
     }
@@ -20,6 +28,7 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -31,6 +40,7 @@ android {
     }
 }
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     def room_version = "1.1.1"
     kapt "com.android.databinding:compiler:3.2.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -112,5 +122,6 @@ dependencies {
     //Sweet Alert Dialog
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.karumi:dexter:6.2.2'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 }
 apply plugin: 'com.google.gms.google-services'
