--- a/base/build.gradle
+++ b/base/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         release {
@@ -41,6 +41,8 @@ android {
 }
 dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     def room_version = "1.1.1"
     kapt "com.android.databinding:compiler:3.2.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -92,7 +94,6 @@ dependencies {
     // (Recommended) Add Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     // Add dependency
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     //add fcm
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     //add in-app messaging
