--- a/base/build.gradle
+++ b/base/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.firebase.firebase-perf'
 android {
     signingConfigs {
         release {
@@ -43,6 +44,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.0.1'
     def room_version = "1.1.1"
     kapt "com.android.databinding:compiler:3.2.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -79,7 +81,7 @@ dependencies {
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
     implementation 'com.android.support:multidex:1.0.3'
     implementation "com.google.firebase:firebase-database:19.2.1"
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -124,5 +126,7 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+  //  testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
 }
 apply plugin: 'com.google.gms.google-services'
