--- a/base/build.gradle
+++ b/base/build.gradle
@@ -14,6 +14,9 @@ android {
             keyPassword 'newshopify'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     dataBinding {
         enabled = true
     }
@@ -110,9 +113,10 @@ dependencies {
     //camera
     implementation 'com.mindorks:paracamera:0.2.2'
     //autoML
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
-    implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.3'
-    implementation 'com.google.firebase:firebase-core:17.2.2'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.1'
+   // implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.3'
+    //implementation 'com.google.firebase:firebase-core:17.2.2'
    // implementation "com.google.android.gms:play-services-instantapps:17.0.0"
     implementation 'me.jessyan:retrofit-url-manager:1.4.0'
     //implementation "androidx.browser:browser:1.2.0"
