Solved product loading issue on homepage and some other minor issues

--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -98,7 +98,12 @@
 
                 <data
                     android:host="magenative.myshopify.com"
+                    android:pathPrefix="/openapp"
                     android:scheme="https" />
+                <data
+                    android:host="magenative.myshopify.com"
+                    android:pathPrefix="/openapp"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
         <activity
