--- a/base/build.gradle
+++ b/base/build.gradle
@@ -139,5 +139,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
     //  testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
     testImplementation 'org.mockito:mockito-inline:3.11.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
 apply plugin: 'com.google.gms.google-services'
