--- a/base/build.gradle
+++ b/base/build.gradle
@@ -45,7 +45,14 @@ android {
         noCompress "tflite"
     }
 }
+repositories {
+    maven { url 'https://zendesk.jfrog.io/zendesk/repo' }
+}
 dependencies {
+    api group: 'com.zendesk', name: 'messaging', version: '5.1.0'
+    api group: 'com.zendesk', name: 'support', version: '5.0.2'
+    api group: 'com.zendesk', name: 'answerbot', version: '3.0.1'
+    api group: 'com.zendesk', name: 'chat', version: '3.1.0'
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     implementation 'com.google.firebase:firebase-analytics-ktx'
