--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -246,6 +246,8 @@
         <activity android:name=".productsection.activities.WriteAReview"
             android:label="@string/app_name"
             android:screenOrientation="fullSensor"/>
+        <activity android:name=".productsection.activities.FilterActivity"
+            android:screenOrientation="portrait"/>
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="ica" />
