--- a/base/build.gradle
+++ b/base/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.google.firebase.firebase-perf'
+//apply plugin: 'com.google.firebase.firebase-perf'
 android {
     signingConfigs {
         release {
@@ -56,7 +56,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx:20.0.1'
+   // implementation 'com.google.firebase:firebase-perf-ktx:20.0.1'
     implementation 'com.google.android.play:core-ktx:1.8.1'
     def room_version = "1.1.1"
     kapt "com.android.databinding:compiler:3.2.0"
