--- a/base/build.gradle
+++ b/base/build.gradle
@@ -150,8 +150,11 @@ dependencies {
     //  testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
     testImplementation 'org.mockito:mockito-inline:3.11.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
+    implementation 'com.facebook.android:facebook-android-sdk:8.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
